fixed label spacing in detail page

--- a/components/modules/dashboard/proposals/proposalDetail.module.css
+++ b/components/modules/dashboard/proposals/proposalDetail.module.css
@@ -46,7 +46,6 @@
 
 .contentLabel {
   text-overflow: ellipsis;
-  padding-right: 20px;
   white-space: nowrap;
   overflow: hidden;
 }
@@ -88,7 +87,6 @@
   font-size: var(--size-m);
   font-weight: var(--font-weight-bold);
   padding: var(--size-xs) var(--size-s);
-  margin: 0 var(--size-xs) var(--size-xs) 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -104,7 +102,6 @@
   font-size: var(--size-m);
   font-weight: var(--font-weight-bold);
   padding: var(--size-xs) var(--size-s);
-  margin: 0 var(--size-xs) var(--size-xs) 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -120,7 +117,6 @@
   font-size: var(--size-m);
   font-weight: var(--font-weight-bold);
   padding: var(--size-xs) var(--size-s);
-  margin: 0 var(--size-xs) var(--size-xs) 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -136,7 +132,6 @@
   font-size: var(--size-m);
   font-weight: var(--font-weight-bold);
   padding: var(--size-xs) var(--size-s);
-  margin: 0 var(--size-xs) var(--size-xs) 0;
   display: flex;
   justify-content: center;
   max-width: 130px;
